Improved CI by adding GitHub Action workflows for testing and building documentation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,12 +37,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
     - name: Build and Commit
-      uses: sphinx-notes/pages
+      uses: sphinx-notes/pages@v2
       with:
         documentation_path: '.'
         requirements_path: './requirements.txt'
         target_branch: gh-pages
-        sphinx_version: 5.0.0
+        sphinx_version: 5.0
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
