Updated target branch for deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,10 +41,9 @@ jobs:
       with:
         documentation_path: ./docs/source
         requirements_path: ./requirements.txt
-        target_branch: gh-pages
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: docs-build
+        branch: gh-pages
         force: true
