--- a/.github/workflows/sphinx_test.yml
+++ b/.github/workflows/sphinx_test.yml
@@ -32,5 +32,5 @@ jobs:
           ${{ runner.os }}-pip-
     - uses: ammaraskar/sphinx-action@master
       with:
-        docs-folder: ".docs/source/"
+        docs-folder: "./docs/source/"
         build-command: "sphinx-build -b html . _build"
